@@ -2,6 +2,8 @@ Changelog for Writer2LaTeX version 1.0 -> 1.2
 
 ---------- version 1.1.8 ----------
 
+[w2x] Crossed out headings are ignored in EPUB export, but retained in the external toc
+
 [all] Added Farsi translation from Mostafa Barmshory
 
 [w2l] Added support for xepersian.sty (fa_IR locale, requires XeTeX backend and multilingual=true)
